# neatfa

./: .gitignore  CMakeLists.txt  LICENSE  README.adoc  build.sh
argos/lobotomy/: 1-C.xml  1-C_compass.xml  1-C_holdingfood.xml  1-C_nearfood.xml  1-C_nest.xml  1-C_nest_food.xml  1-C_pheromone.xml  1-C_robotproximity.xml  1-P.xml  1-P_compass.xml  1-P_holdingfood.xml  1-P_nearfood.xml  1-P_nest.xml  1-P_nest_food.xml  1-P_pheromone.xml  1-P_robotproximity.xml  1-R.xml  1-R_compass.xml  1-R_holdingfood.xml  1-R_nearfood.xml  1-R_nest.xml  1-R_nest_food.xml  1-R_pheromone.xml  1-R_robotproximity.xml
argos/source/: iAnt_controller.cpp  iAnt_loop_functions.cpp  iAnt_loop_functions.h  iAnt_pheromone.h  iAnt_qt_user_functions.cpp  main.cpp
argos/source/ga/: Chromosome.cpp  Chromosome.h  ChromosomeFactory.cpp  ChromosomeFactory.h  Unique.cpp
argos/source/nn/: NeuralNetFactory.cpp  NeuralNetwork.h  Perceptron.cpp  ValueNeuron.cpp  ValueNeuron.h
experiments/: iAnt.xml
iAntRunner/: iAnt.xml  pom.xml
iAntRunner/src/main/java/edu/unm/: ChromosomeGraphViz.java  ExperimentParameters.java  ExperimentParamterFactory.java  FileStatisticsRunner.java  IAntXMLBuilder.java  LRUCache.java  LocalOrganismExecutor.java  Logger.java  NEATExperiemnt.java  NEATExperiment.java  OrganismExecutor.java  OrganismIdWrapper.java  ProcessExecutable.java  RemoteOrganismExecutor.java  RemoteRunner.java  Runner.java  StatisticsRunner.java
iAntRunner/src/main/java/edu/unm/neat/gui/: Execution.java  MainGui.java  MyClassLoader.java  ParamValue.java  Parameter.java  bin_inp.java  xor_out.java
iAntRunner/src/main/java/edu/unm/neat/jGraph/: Edge.java  Vertex.java  mXY.java
iAntRunner/src/main/java/edu/unm/neat/jNeatCommon/: CodeConstant.java  EnvRoutine.java  IOseq.java  NeatConstant.java  NeatRoutine.java
iAntRunner/src/main/java/edu/unm/neat/jneat/: Evolution.java  Gene.java  Genome.java  Link.java  NNode.java  Neat.java  Network.java  Population.java  order_inner.java  order_orgs.java
iAntRunner/src/main/java/edu/unm/neat/log/: HistoryLog.java
runner/: pom.xml
runner/src/main/java/edu/unm/: ExperimentParameters.java  FileStatisticsRunner.java  IAntXMLBuilder.java  LocalOrganismExecutor.java  Logger.java  MaxChromosome.java  NEATExperiment.java  OrganismExecutor.java  ProcessExecutable.java  Runner.java  StatisticsRunner.java  XMLParameters.java
runner/src/main/java/edu/unm/neat/gui/: Generation.java  Grafi.java  Session.java  fitness_parity.java  vectTableModel.java  xor_fit.java
runner/src/main/java/edu/unm/neat/jGraph/: GrafRoutine.java  Structure.java  chartXY.java  code.java  graph.java  order_code.java  order_inner.java  planeXY.java
runner/src/main/java/edu/unm/neat/jNeatCommon/: EnvConstant.java
runner/src/main/java/edu/unm/neat/jneat/: Innovation.java  Organism.java  Species.java  Trait.java  jConsoleNeat.java  order_species.java
source/: CMakeLists.txt  iAnt_controller.cpp  iAnt_controller.h  iAnt_loop_functions.cpp  iAnt_loop_functions.h  iAnt_pheromone.cpp  iAnt_pheromone.h  iAnt_qt_user_functions.cpp  main.cpp
source/ga/: BasicGA.cpp  BasicGA.h  Chromosome.cpp  Chromosome.h  ChromosomeFactory.cpp  ChromosomeFactory.h  Unique.h
source/nn/: InputNeuron.cpp  InputNeuron.h  NeuralNetFactory.cpp  NeuralNetFactory.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  Perceptron.cpp  Perceptron.h
